packages/react-notion-x/src/styles.css
/* ... */
.notion-table-th:last-child .notion-table-view-header-cell-inner {
  border-right: 0 none;
}

.notion-collection-column-title {
  display: flex;
  align-items: center;
  line-height: 120%;
  min-width: 0;
  font-size: 14px;
}

.notion-collection-column-title-icon {
  display: inline-block;
  width: 14px;
  height: 14px;
  min-width: 14px;
  min-height: 14px;
  fill: var(--fg-color-2);
  margin-right: 6px;
}

.notion-collection-column-title-body {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.notion-table-body {
  position: relative;
  min-width: var(--notion-max-width);
}

.notion-table-row {
  display: flex;
  border-bottom: 1px solid var(--fg-color-1);
}

.notion-table-cell {
  min-height: 32px;
  padding: 5px 8px 6px;
  font-size: 14px;
  line-height: 1;
  white-space: normal;
  overflow: hidden;
  word-break: break-word;
  border-right: 1px solid var(--fg-color-1);
}

.notion-table-cell:last-child {
  border-right: 0 none;
}

.notion-table-cell-title {
  font-weight: 500;
}

.notion-table-cell-text {
  white-space: pre-wrap;
}

.notion-table-cell-text,
.notion-table-cell-number,
.notion-table-cell-url,
.notion-table-cell-email,
.notion-table-cell-phone_number {
  line-height: 1.5;
}

.notion-table-cell-number {
  white-space: pre-wrap;
}

.notion-table-cell-select,
.notion-table-cell-multi_select {
  padding: 7px 8px 0;
}

.notion-table-cell-auto_increment_id {
  color: var(--fg-color-7);
}

.notion-property-select,
.notion-property-status,
.notion-property-multi_select {
  display: flex;
  flex-wrap: wrap;
  gap: 6px;
}

.notion-property-select-item,
.notion-property-status-item,
.notion-property-multi_select-item {
  display: flex;
  align-items: center;
  padding: 0 6px;
  border-radius: 3px;
  height: 20px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: 120%;
}

.notion-property-status-item {
  border-radius: 20px;
}

.notion-property-file {
  display: flex;
  flex-wrap: wrap;
  align-content: flex-start;
}

.notion-property-file img {
  max-height: 24px;
  max-width: 100%;
  margin-right: 6px;
}

.notion-collection-card-cover .notion-property-file {
  height: 100%;
}

.notion-collection-card-cover .notion-property-file img {
  width: 100%;
  margin: 0;
  max-height: 100%;
}

.notion-collection-card .notion-property-checkbox-container {
  display: flex;
}

.notion-property-checkbox-text {
  display: none;
}

.notion-collection-card .notion-property-checkbox-text {
  display: inline-block;
  margin-left: 6px;
}

.notion-property-checkbox {
  width: 16px;
  height: 16px;
}

.notion-property-checkbox-checked {
  width: 16px;
  height: 16px;
  background: var(--select-color-0);
}

.notion-property-checkbox-checked svg {
  position: relative;
  display: block;
  /* top: -3px; */
  top: 1px;
  left: 1px;
  width: 14px;
  height: 14px;
  fill: #fff;
}

.notion-property-checkbox-unchecked {
  width: 16px;
  height: 16px;
  border: 1.3px solid var(--fg-color);
}

.notion-gallery {
  align-self: center;
}

.notion-gallery-view {
  position: relative;
  padding-left: 0;
  transition: padding 200ms ease-out;
}

.notion-gallery-grid {
  display: grid;
  position: relative;
  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
  grid-auto-rows: 1fr;
  gap: 16px;
  border-top: 1px solid var(--fg-color-1);
  padding-top: 16px;
  padding-bottom: 4px;
}

.notion-gallery-grid-size-small {
  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
}

.notion-gallery-grid-size-large {
  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
}

.notion-collection-card {
  display: flex;
  flex-direction: column;
  overflow: hidden;

  text-decoration: none;
  box-shadow:
    rgba(15, 15, 15, 0.1) 0 0 0 1px,
    rgba(15, 15, 15, 0.1) 0 2px 4px;
  border-radius: var(--notion-corner-radius);
  background: var(--bg-color);
  color: var(--fg-color);
  transition: background 100ms ease-out 0s;

  user-select: none;
  cursor: pointer;
}

.notion-collection-card:hover {
  background: var(--bg-color-0);
}

.notion-collection-card-cover {
  position: relative;
  width: 100%;
  height: 190px;
  border-bottom: 1px solid var(--fg-color-0);
  overflow: hidden;
}

.notion-collection-card-cover img {
  width: 100%;
  height: 100%;
  border-radius: var(--notion-corner-radius) var(--notion-corner-radius) 0 0;
  /* object-fit: cover; */
}

.notion-collection-card-cover .notion-collection-card-cover-empty {
  width: 100%;
  height: 100%;
  pointer-events: none;
  overflow: hidden;
  background: var(--fg-color-5);
  box-shadow: var(--fg-color-0) 0 -1px 0 0 inset;
  padding: 8px 8px 0;
}

.notion-collection-card-size-small .notion-collection-card-cover {
  height: 124px;
}

.notion-collection-card-body {
  display: flex;
  flex-direction: column;
  padding: 4px 10px;
}

.notion-collection-card-property {
  padding: 4px 0;
  white-space: nowrap;
  word-break: break-word;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 12px;
}

.notion-collection-card-property:first-child {
  font-size: 14px;
  font-weight: 500;
}

.notion-collection-card-property:not(:first-child) {
  white-space: nowrap;
  text-overflow: clip;
}

.notion-collection-card-property img {
  max-height: 18px;
}

.notion-list-collection {
  align-self: center;
}

.notion-list-collection {
  width: 100%;
  max-width: 100%;
}

.notion-list-view {
  position: relative;
  padding-left: 0;
  transition: padding 200ms ease-out;
  max-width: 100%;
}

.notion-list-body {
  display: flex;
  flex-direction: column;
  border-top: 1px solid var(--fg-color-1);
  padding-top: 8px;
  max-width: 100%;
  overflow: hidden;
}

.notion-list-item {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 4px;
  margin: 1px 0;
  max-width: 100%;
  overflow: hidden;
}

.notion-list-item-title {
  display: flex;
  align-items: center;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
  line-height: 1.3;
}
/* ... */

